--- a/css/slyle.css
+++ b/css/slyle.css
@@ -277,61 +277,6 @@ line-height: 1.2;
     
 }
 
-/* modal */
-.backdrop {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    visibility: visible;
-    opacity: 1;
-    background: rgba(0, 0, 0, 0.2);
-
-    transition: visibility 250ms var(--cubic), opacity 250ms var(--cubic);
-    
-}
-
-.is-hidden.backdrop {
-    visibility: hidden;
-    pointer-events: none;
-    opacity: 0;
-}
-.is-hidden.backdrop .modal {
-    transform: translate(-50%, -50%) scale(1.5);
-}
-
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    transition: transform 500ms linear;
-    width: 528px;
-    height: 581px;
-    border-radius: 4px;
-    background-color:var(--white-color);
-
-}
-
-
-
-.modal-close {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    padding: 0;
-    background-color: transparent;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
 
 
 /* Features */
@@ -753,7 +698,83 @@ border-radius: 50%;
     color: #FFFFFF;
 }
 
+/* Пшдписатися на розсилку */
+.footer-sub {
+    margin-left: 93px;
+    padding-top: 12px;
+}
 
+.sub-container {
+    display: flex;
+}
+
+.sub-input {
+    width: 358px;
+    height: 50px;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    padding-left: 16px;
+
+    background-color: inherit;
+
+    font-size: 16px;
+    line-height: calc(20/16);
+    letter-spacing: 0.03em;
+
+    color: rgba(255, 255, 255, 0.6);
+
+
+    transition-property: outline, border-color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubic);
+}
+.sub-input::placeholder {
+    font-size: 16px;
+    line-height: calc(20/16);
+    letter-spacing: 0.03em;
+
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.sub-input:focus {
+    outline: var(--blue-color);
+    border-color: var(--blue-color);
+}
+
+.sub-submit {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    margin-left: 12px;
+    padding: 10px 28px;
+
+    min-width: 200px;
+    height: 50px;
+
+    border: none;
+    border-radius: 4px;
+    background-color: var(--blue-color);
+    color: var(--white-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30/16);
+    letter-spacing: 0.06em;
+
+
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubic);
+}
+
+.sub-submit:hover,
+.sub-submit:focus {
+    box-shadow: none;
+}
 
 
 
@@ -834,7 +855,238 @@ border-radius: 50%;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+/* modal */
+.backdrop {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    visibility: visible;
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.2);
+
+    transition: visibility 250ms var(--cubic), opacity 250ms var(--cubic);
+
+}
+
+.is-hidden.backdrop {
+    visibility: hidden;
+    pointer-events: none;
+    opacity: 0;
+}
+
+.is-hidden.backdrop .modal {
+    transform: translate(-50%, -50%) scale(1.5);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 500ms linear;
+    width: 528px;
+    height: 581px;
+    border-radius: 4px;
+    background-color: var(--white-color);
+
+}
 
 
 
+.modal-close {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    padding: 0;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+
+    transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: var(--cubic);
+}
+.modal-close:hover,
+.modal-close:focus {
+    fill: var(--blue-color);
+
+}
+
+/* Форма */
+
+.feedback-form {
+    flex-grow: 1;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.feedback-title {
+    margin-bottom: 12px;
+
+    font-weight: 700;
+    font-size: 20px;
+    line-height: calc(23/20);
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--title-text-color);
+}
+
+.feedback-list {
+    margin-bottom: 20px;
+}
+
+.feedback-item {
+    margin-bottom: 10px;
+}
+
+.feedback-lable {
+    display: block;
+    position: relative;
+}
+
+.feedback-text {
+    margin-bottom: 4px;
+
+    font-size: 12px;
+    line-height: calc(14/12);
+    letter-spacing: 0.01em;
+
+    color: var(--primary-text-color);
+}
+
+.feedback-input {
+    width: 100%;
+    height: 40px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 42px;
+
+    font-size: 12px;
+    line-height: calc(14/12);
+    letter-spacing: 0.01em;
+
+
+    transition-property: outline, border-color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubic);
+
+}
+
+.feedback-textarea {
+    resize: none;
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+
+    font-size: 12px;
+    line-height: calc(14/12);
+    letter-spacing: 0.01em;
+}
+
+.feedback-textarea::placeholder {
+    font-size: 12px;
+    line-height: calc(14/12);
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.feedback-icon {
+    display: block;
+    position: absolute;
+    left: 12px;
+    bottom: 11px;
+
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubic);
+}
+
+.feedback-input:focus,
+.feedback-input:hover {
+    outline: inherit;
+    border-color: var(--blue-color);
+}
+
+
+.feedback-input:hover+.feedback-icon,
+.feedback-input:focus+.feedback-icon
+{
+    fill: var(--blue-color);
+}
+
+.checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 12px;
+}
+.checkbox-label {
+    display: block;
+}
+.checkbox-icon {
+    position: relative;
+    display: block;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--title-text-color);
+    border-radius: 2px;
+    
+
+    transition-property: border, background-color, background-image;
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubic);
+
+}
+.checkbox-input {
+    position: absolute;
+    appearance: none;
+}
+
+.checkbox-input:checked + .checkbox-icon {
+    border: inherit;
+    background-color: var(--blue-color);
+}
+.checkbox-text {
+        font-size: 14px;
+        line-height: 1.7;
+        letter-spacing: 0.03em;
+        margin-left: 8px;
+    
+        color: var(--primary-text-color);
+}
+.checkbox-text .checkbox-link {
+    color: var(--blue-color);
+
+}
+
+
+
+
+.feedback-submit {
+    border: 0;
+    border-radius: 4px;
+    margin: 0 auto;
+    padding: 10px 52px;
+    background-color: var(--blue-color);
+}
+
+.feedback-submit:hover,
+.feedback-submit:focus {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    background-color: var(--blue-color);
+    color: var(--white-color);
+}
     
