--- a/css/slyle.css
+++ b/css/slyle.css
@@ -273,22 +273,16 @@ line-height: 1.2;
     url(../images/bghero.jpg);
     background-repeat: no-repeat;
     background-position:center;
-
-    
 }
-
-
 
 /* Features */
 .feature-list {
-    padding-top: 94px;
-    
+    padding-top: 94px; 
 }
 
 .feature-link {
         display: flex;
-    }
-
+}
 
 .icon-feature {
     border-radius: 4px;
@@ -299,12 +293,11 @@ line-height: 1.2;
 }
 .feature-item{
     width: calc((1170px - (30px*3))/4);
-    
     }
 
 .feature-item + .feature-item{
     margin-left: 30px;
-    }
+}
 
 .feature-list .title {
     color: var(--title-text-color);
@@ -312,18 +305,16 @@ line-height: 1.2;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
-    margin-bottom: 10px;
-
-    
+    margin-bottom: 10px;   
 }
 .text-title {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
 
-    margin-top: 10px;
-    
+    margin-top: 10px; 
 }
+
 /* section */
 
 .tumbe {
@@ -389,11 +380,7 @@ line-height: 1.2;
 
 .team-icon {
  fill: var(--color-icon);
-
 }
-
-
-
 
 .team-link:hover .team-icon,
 .team-link:focus .team-icon {
@@ -765,7 +752,6 @@ border-radius: 50%;
     line-height: calc(30/16);
     letter-spacing: 0.06em;
 
-
     transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: var(--cubic);
@@ -787,17 +773,15 @@ border-radius: 50%;
     margin-bottom: 50px;
     
     transition-property: color, background-color;
-        transition-duration: 250ms;
-        transition-timing-function: var(--cubic);
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubic);
 }
 .button-menu {
     border: none;
     border-radius: 4px;
     min-width: 73px;
-    padding-top: 6px;
-    padding-right: 22px;
-    padding-bottom: 6px;
-    padding-left: 22px;
+    padding: 6px 22px;
+    
     
     color: var(--title-text-color);
     background-color: var(--second-background-color);
@@ -813,11 +797,8 @@ border-radius: 50%;
     transition-property: color, background-color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: var(--cubic);
-
     }
         
-    
-    
 .button-menu:hover,
 .button-menu:focus {
     color: var(--white-color);
@@ -911,16 +892,16 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border: 1px solid rgba(0, 0, 0, 0.1);
 
     transition-property: color;
-        transition-duration: 250ms;
-        transition-timing-function: var(--cubic);
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubic);
 }
-.modal-close:hover,
-.modal-close:focus {
+.modal-close:hover .icon-modal,
+.modal-close:focus .icon-modal{
     fill: var(--blue-color);
 
 }
 
-/* Форма */
+/* Форма модального вікна*/
 
 .feedback-form {
     flex-grow: 1;
@@ -928,6 +909,8 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 581px;
+    width: 528px;
 }
 
 .feedback-title {
@@ -1076,10 +1059,15 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
 
 .feedback-submit {
-    border: 0;
+    border: none;
     border-radius: 4px;
     margin: 0 auto;
     padding: 10px 52px;
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    color: var(--white-color);
     background-color: var(--blue-color);
 }
 
